# rubbish

./: .editorconfig  .gitignore  .prettierrc  LICENSE  README.md  build.py  pyproject.toml  test.py
examples/: test.rsh  test.txt
rubbish/: __init__.py  __main__.py  commandline.py
rubbish/core/: __init__.py  _command.h  _execute.c  _global.h  _parse.c  _prompt.c  _prompt.h  color_control.c  color_control.pxd  color_control.pyi  color_control.pyx  command.c  command.h  command.pxd  command.pyi  command.pyx  config.c  config.pxd  config.pyi  config.pyx  execute.c  execute.pxd  execute.pyi  execute.pyx  grammar.tab.c  grammar.tab.h  grammar.y  lexial.l  lexial.yy.c  lexical.l  lexical.yy.c  parse.c  parse.pyi  parse.pyx  prompt.c  prompt.pyi  prompt.pyx
rubbish/gui/: main.py  send.py
rubbish/gui/src/: ansi_up.js  qwebchannel.js  terminal.html
