[tool.poetry]
name = "rubbish"
version = "0.1.0"
description = "Yet another Rubbi shell"
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "MIT"
build = "build.py"
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
Cython = "^0.29.23"
colorama = "^0.4.4"
PyQt5 = { version = "^5.15.4", optional = true }
PyQtWebEngine = "^5.15.4"
prompt-toolkit = "^3.0.19"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[tool.poetry.extras]
ui = ["PyQt5"]

[tool.poetry.scripts]
rubbish = "rubbish.__main__:start"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
